changes and fixes(search fix)

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
       </header>
 
       <!--==================== SEARCH ====================-->
-      <div class="search" id="search-content">
-         <form action="" class="search__form">
-            <i class="ri-search-line search__icon"></i>
-            <input type="search" placeholder="What are you looking for?" class="search__input">
-         </form>
-
-         <i class="ri-close-line search__close" id="search-close"></i>
-      </div>
+<div class="search" id="search-content">
+   <form class="search__form">
+       <i class="ri-search-line search__icon"></i>
+       <input type="text" placeholder="Search for books..." class="search__input">
+   </form>
+   <div class="search__results"></div>
+   <i class="ri-close-line search__close" id="search-close"></i>
+</div>
 <!--==================== SIGNUP ====================-->
 <div class="signup grid" id="signup-content">
    <form action="" class="signup__form grid">
@@ -986,7 +986,7 @@
                      <article class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial-perfil-1.png" alt="img" class="testimonial__img">
 
-                        <h2 class="testimonial__title">Rial Loz</h2>
+                        <h2 class="testimonial__title">Tester</h2>
                         <p class="testimonial__description">
                            The best website to buy books, the purchase 
                            is very easy to make and has great discounts.
@@ -1004,7 +1004,7 @@
                      <article class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial-perfil-2.png" alt="img" class="testimonial__img">
 
-                        <h2 class="testimonial__title">Rial Loz</h2>
+                        <h2 class="testimonial__title">Tester 2</h2>
                         <p class="testimonial__description">
                            The best website to buy books, the purchase 
                            is very easy to make and has great discounts.
@@ -1022,7 +1022,7 @@
                      <article class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial-perfil-3.png" alt="img" class="testimonial__img">
 
-                        <h2 class="testimonial__title">Rial Loz</h2>
+                        <h2 class="testimonial__title">Tester 3</h2>
                         <p class="testimonial__description">
                            The best website to buy books, the purchase 
                            is very easy to make and has great discounts.
@@ -1040,7 +1040,7 @@
                      <article class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial-perfil-4.png" alt="img" class="testimonial__img">
 
-                        <h2 class="testimonial__title">Rial Loz</h2>
+                        <h2 class="testimonial__title">Tester 4</h2>
                         <p class="testimonial__description">
                            The best website to buy books, the purchase 
                            is very easy to make and has great discounts.
