fix theme toggle

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>kaelars novel</title>
+      <title>Kaelars novel</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo">
-               <i class="ri-book-3-line"></i> kaelars e-books
+               <i class="ri-book-3-line"></i> Kaelars e-books
             </a>
             
             <div class="nav__menu">
@@ -1090,7 +1090,7 @@
          <div class="footer__container container grid">
             <div>
                <a href="#" class="footer__logo">
-                  <i class="ri-book-3-line"></i> E-Book
+                  <i class="ri-book-3-line"></i> Kaelars e-Book
                </a>
 
                <p class="footer__description">
