--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
          <nav class="nav container">
             <a href="#" class="nav__logo">
                <i class="ri-book-3-line"></i> Kaelars e-books
+               <span class="logo__slogan">Find and explore the best e-books from all your favorite writers</span>
             </a>
             
             <div class="nav__menu">
