--- a/reader.html
+++ b/reader.html
@@ -130,6 +130,7 @@
 </script>
 
 <!--=============== MAIN JS ===============-->
+<script src="assets/js/main.js"></script>
   
 <!--=============== READER JS ===============-->
 <script src="assets/js/reader.js"></script>
