fixing and adding remmeber option

--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
                
                <div>
                   <label for="login-pass" class="login__label">Password</label>
-                  <input type="password" placeholder="Enter your password" id="login-pass" class="login__input">
+                  <input type="password" placeholder="Write your password" id="login-pass" class="login__input">
+               </div>
+               
+               <div class="login__remember">
+                  <input type="checkbox" id="remember-me" checked>
+                  <label for="remember-me">Remember me</label>
                </div>
             </div>
 
